--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "dependencies": {
     "next": "13.5.4",
+    "prism": "^1.0.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "sass": "^1.69.3"
   }
 }
