--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.4",
+    "next": "^13.5.4",
     "prism": "^1.0.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
