--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "next": "^13.5.4",
     "prism": "^1.0.0",
     "prismjs": "^1.29.0",
