--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
     "next": "^13.5.4",
     "prism": "^1.0.0",
     "prismjs": "^1.29.0",
